<resources>
    <!-- Main Activity -->
    <string name="app_name">FunkoPop</string>
    <string name="fab_text">Add a New Funko</string>
    <string name="search_hint_text">Search by name or group</string>
    <string name="total_funkos_text_view_text">Total Funkos : %1$s</string>
    <string name="total_cost_text_view_text">Total Value : %1$s</string>

    <!-- View Funko Fragment-->
    <string name="view_ok_button_text"> OK </string>
    <string name="view_selected_funko_text">Selected Funko!</string>
    <string name="view_name_text_view_text">Name :    %1$s</string>
    <string name="view_group_text_view_text">Group :    %1$s</string>
    <string name="view_number_text_view_text">Number :    %1$d</string>
    <string name="view_price_text_view_text">Price :    %1$s</string>
    <string name="view_size_text_view_text">Size :    %1$d inches</string>

    <!-- Add Funko Fragment -->
    <string name="add_name_hint">Name</string>
    <string name="add_group_hint">Group</string>
    <string name="add_number_hint">Number</string>
    <string name="add_price_hint">Price</string>
    <string name="add_size_hint">Size</string>
    <string name="add_save_button_text">Save</string>
    <string name="add_cancel_button_text">Cancel</string>
    <string name="add_fragment_message">Add a Funko Pop!</string>
    <string name="add_field_blank_toast_message">All fields must be filled out!</string>
    <string name="add_neg_number_toast_message">Number must be greater than zero</string>
    <string name="add_neg_price_toast_message">Price must be greater than zero</string>
    <string name="add_bad_size_toast_message">Size can be: 1, 3, 6, 10 or 18 (inches)</string>

</resources>